# MyCppApp

./: .gitignore  .gitmodules  CMakeLists.txt  CPU_VERSION_README.md
config/: params.xml
include/: BoxPosePipeline.h  Detector.h  FusionGeometry.h  LanxinCamera.h  MaskRCNN.h  MaskRCNNRunner.h  RecognitionRes.h  Utils.h  VideoEncoder.h  Yolo.h  YoloVideo.h  common.h  cpu_library.h  library.h  mylibrary.h
res/461/: boxes.json
src/: BoxPosePipeline.cpp  Detector.cpp  FusionGeometry.cpp  LanxinCamera.cpp  MaskRCNN.cpp  MaskRCNNRunner.cpp  MaskRCNNRunnerGPU.cpp  RecognitionRes.cpp  Utils.cpp  VideoEncoder.cpp  Yolo.cpp  YoloVideo.cpp  cpu_library.cpp  gpu_library.cpp  library.cpp  main.cpp  mylibrary.cpp  test_gpu_dll.cpp
test/sqlite_test/: CMakeLists.txt
tests/httplib_test/client/: CMakeLists.txt  client.cpp
tests/httplib_test/server/: CMakeLists.txt  server.cpp
tests/nlohmann_test/: CMakeLists.txt  json_test.cpp
tests/opencv_test/: CMakeLists.txt  opencv_test.cpp
tests/pcl_test/: CMakeLists.txt  pcl_test.cpp
tests/spdlog_test/: CMakeLists.txt  spdlog_test.cpp
tests/sqlite_test/: CMakeLists.txt  sqlite_test.cpp
